Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6825

ofd_statfs() should not return ENOSPC to the client or MDT if the layout LFSCK is rebuilding LAST_ID

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • None
    • None
    • 3
    • 9223372036854775807

      Such checking has been done when the MDT wants to pre-allocate OST-object via ofd_create_hdl. On the other hand, the statfs request maybe from client, return ENOSPC to the client may confuses the client.

            yong.fan nasf (Inactive)
            yong.fan nasf (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: